2012-02-06  Robert Larice
 * src/tclspice.c :
   drop some (char*) casts

2012-02-06  Robert Larice
 * src/frontend/vectors.c ,
 * src/misc/wlist.c :
   preserve const'ness of some casts

2012-02-06  Robert Larice
 * src/frontend/numparam/spicenum.c :
   drop (void*) cast of the dispose() argument

2012-02-06  Robert Larice
 * src/frontend/terminal.c :
   drop tgetstr() return value cast

2012-02-06  Robert Larice
 * src/frontend/parser/complete.c :
   drop (char*) cast in the third argument of ioctl()

2012-02-06  Robert Larice
 * src/frontend/outitf.c ,
 * src/frontend/spiceif.c ,
 * src/frontend/subckt.c ,
 * src/frontend/plotting/graf.c ,
 * src/spicelib/analysis/cktnames.c ,
 * src/spicelib/devices/hisim2/hsm2noi.c ,
 * src/spicelib/devices/hisimhv/hsmhvnoi.c ,
 * src/spicelib/parser/ifnewuid.c ,
 * src/spicelib/parser/inpptree.c ,
 * src/xspice/mif/mifsetup.c :
   drop some more casts

2012-02-06  Robert Larice
 * src/spicelib/analysis/analysis.c ,
 * src/spicelib/devices/urc/urcsetup.c :
   drop some casts

2012-02-06  Robert Larice
 * src/xspice/cm/cm.c ,
 * src/xspice/evt/evtsetup.c ,
 * src/xspice/evt/evttermi.c ,
 * src/xspice/mif/mifconvt.c ,
 * src/xspice/mif/mifload.c ,
 * src/xspice/mif/mifsetup.c :
   drop some (char*) casts

2012-02-06  Robert Larice
 * src/include/ngspice/inpdefs.h ,
 * src/spicelib/parser/inplkmod.c :
   rewrite INPlookMod(), return INPmodel*/NULL instead of int 1/0

2012-02-06  Robert Larice
 * src/frontend/com_compose.c ,
 * src/frontend/define.c ,
 * src/frontend/device.c ,
 * src/frontend/inpcom.c ,
 * src/frontend/parse.c ,
 * src/frontend/vectors.c ,
 * src/frontend/parser/complete.c ,
 * src/frontend/parser/unixcom.c ,
 * src/frontend/wdisp/windisp.c ,
 * src/include/ngspice/ngspice.h ,
 * src/spicelib/parser/inpptree.c :
   use strchr() instead of index()
     which is depreciated

============================ ngspice-24 ==================================
2012-01-30  Dietmar Warning